<resources>
        <string name="credit">Credit by dpocheng</string>

    <string name="app_name">My App Porfolio</string>

    <string name="main_textview">My Nanodegree Apps!</string>

    <string name="action_settings">Settings</string>

    <string name="button_1">POPULAR MOVIES</string>
    <string name="button_2">STOCK HAWK</string>
    <string name="button_3">BUILD IT BIGGER</string>
    <string name="button_4">MAKE YOUR APP MATERIAL</string>
    <string name="button_5">GO UBIQUITOUS</string>
    <string name="button_6">CAPSTONE</string>

    <string name="toast_1">This button will launch my popular movies app!</string>
    <string name="toast_2">This button will launch my stock hawk app!</string>
    <string name="toast_3">This button will launch my build it bigger app!</string>
    <string name="toast_4">This button will launch my make your app material app!</string>
    <string name="toast_5">This button will launch my go ubiquitous app!</string>
    <string name="toast_6">This button will launch my capstone app!</string>

</resources>
