<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".proj0.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_textview"
                android:textSize="25sp"
                android:textStyle="bold">
            </TextView>

            <LinearLayout
                android:id="@+id/button_list"
                android:orientation="vertical"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <Button
                    android:id="@+id/button1"
                    android:text="@string/button_1"
                    android:contentDescription="@string/toast_1"
                    style="@style/ButtonStyle">
                </Button>

                <Button
                    android:id="@+id/button2"
                    android:text="@string/button_2"
                    android:contentDescription="@string/toast_2"
                    style="@style/ButtonStyle">
                </Button>

                <Button
                    android:id="@+id/button3"
                    android:text="@string/button_3"
                    android:contentDescription="@string/toast_3"
                    style="@style/ButtonStyle">
                </Button>

                <Button
                    android:id="@+id/button4"
                    android:text="@string/button_4"
                    android:contentDescription="@string/toast_4"
                    style="@style/ButtonStyle">
                </Button>

                <Button
                    android:id="@+id/button5"
                    android:text="@string/button_5"
                    android:contentDescription="@string/toast_5"
                    style="@style/ButtonStyle">
                </Button>

                <Button
                    android:id="@+id/button6"
                    android:text="@string/button_6"
                    android:contentDescription="@string/toast_6"
                    style="@style/ButtonStyle">
                </Button>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
